[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://src/scripts/Hud.gd" id="1"]
[ext_resource type="Script" path="res://src/scripts/ui/AutoSizingPanel.gd" id="2"]

[node name="HudLayer" type="CanvasLayer"]
script = ExtResource("1")

[node name="LayoutRoot" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="RootColumn" type="VBoxContainer" parent="LayoutRoot"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="TopBar" type="HBoxContainer" parent="LayoutRoot/RootColumn"]
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 96)

[node name="CampaignBlock" type="VBoxContainer" parent="LayoutRoot/RootColumn/TopBar"]
size_flags_horizontal = 1

[node name="TopSpacer" type="Control" parent="LayoutRoot/RootColumn/TopBar"]
size_flags_horizontal = 3

[node name="TurnBlock" type="VBoxContainer" parent="LayoutRoot/RootColumn/TopBar"]
size_flags_horizontal = 1

[node name="ContentRow" type="HBoxContainer" parent="LayoutRoot/RootColumn"]
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="BottomBar" type="HBoxContainer" parent="LayoutRoot/RootColumn"]
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 64)
mouse_filter = 2

[node name="BottomSpacer" type="Control" parent="LayoutRoot/RootColumn/BottomBar"]
size_flags_horizontal = 3
mouse_filter = 2

[node name="NextTurnButton" type="Button" parent="LayoutRoot/RootColumn/BottomBar"]
text = "Advance Turn"
custom_minimum_size = Vector2(220, 48)
size_flags_horizontal = 0

[node name="LeftDock" type="MarginContainer" parent="LayoutRoot/RootColumn/ContentRow"]
size_flags_horizontal = 1
size_flags_vertical = 3
custom_minimum_size = Vector2(360, 0)
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 24

[node name="LeftScroll" type="ScrollContainer" parent="LayoutRoot/RootColumn/ContentRow/LeftDock"]
size_flags_horizontal = 3
size_flags_vertical = 3
vertical_scroll_mode = 2
mouse_filter = 2

[node name="LeftStack" type="VBoxContainer" parent="LayoutRoot/RootColumn/ContentRow/LeftDock/LeftScroll"]
size_flags_horizontal = 3
size_flags_vertical = 3
custom_minimum_size = Vector2(360, 0)
mouse_filter = 2

[node name="CenterSpacer" type="Control" parent="LayoutRoot/RootColumn/ContentRow"]
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="RightDock" type="MarginContainer" parent="LayoutRoot/RootColumn/ContentRow"]
size_flags_horizontal = 1
size_flags_vertical = 3
custom_minimum_size = Vector2(320, 0)
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 24

[node name="RightScroll" type="ScrollContainer" parent="LayoutRoot/RootColumn/ContentRow/RightDock"]
size_flags_horizontal = 3
size_flags_vertical = 3
vertical_scroll_mode = 2
mouse_filter = 2

[node name="RightStack" type="VBoxContainer" parent="LayoutRoot/RootColumn/ContentRow/RightDock/RightScroll"]
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="TurnLabel" type="Label" parent="LayoutRoot/RootColumn/TopBar/TurnBlock"]
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Turn 0"

[node name="MetricsLabel" type="Label" parent="LayoutRoot/RootColumn/TopBar/TurnBlock"]
theme_override_colors/font_color = Color(0.8, 0.95, 1, 1)
text = "Units: 0"

[node name="CampaignTitleLabel" type="Label" parent="LayoutRoot/RootColumn/TopBar/CampaignBlock"]
theme_override_colors/font_color = Color(0.95, 0.9, 0.75, 1)
text = "Trail Sovereigns"

[node name="CampaignSubtitleLabel" type="Label" parent="LayoutRoot/RootColumn/TopBar/CampaignBlock"]
theme_override_colors/font_color = Color(0.8, 0.9, 1, 1)
text = "Nomadic strategy saga"

[node name="VictoryPanel" type="PanelContainer" parent="LayoutRoot/RootColumn/ContentRow/RightDock/RightScroll/RightStack"]
custom_minimum_size = Vector2(0, 140)

[node name="Margin" type="MarginContainer" parent="LayoutRoot/RootColumn/ContentRow/RightDock/RightScroll/RightStack/VictoryPanel"]
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VictoryLabel" type="RichTextLabel" parent="LayoutRoot/RootColumn/ContentRow/RightDock/RightScroll/RightStack/VictoryPanel/Margin"]
bbcode_enabled = true
scroll_active = false
text = "[b]Victory[/b]\n[i]Awaiting telemetry.[/i]"

[node name="SelectionPanel" type="PanelContainer" parent="LayoutRoot/RootColumn/ContentRow/LeftDock/LeftScroll/LeftStack"]
script = ExtResource("2")
target_width = 320.0
min_height = 140.0
max_height = 420.0
bottom_margin = 40.0
custom_minimum_size = Vector2(320, 0)
visible = false

[node name="StockpilePanel" type="PanelContainer" parent="LayoutRoot/RootColumn/ContentRow/LeftDock/LeftScroll/LeftStack"]
custom_minimum_size = Vector2(320, 120)

[node name="StockpileMargin" type="MarginContainer" parent="LayoutRoot/RootColumn/ContentRow/LeftDock/LeftScroll/LeftStack/StockpilePanel"]
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="StockpileVBox" type="VBoxContainer" parent="LayoutRoot/RootColumn/ContentRow/LeftDock/LeftScroll/LeftStack/StockpilePanel/StockpileMargin"]
size_flags_horizontal = 3

[node name="StockpileTitle" type="Label" parent="LayoutRoot/RootColumn/ContentRow/LeftDock/LeftScroll/LeftStack/StockpilePanel/StockpileMargin/StockpileVBox"]
text = "Stockpiles"

[node name="StockpileList" type="VBoxContainer" parent="LayoutRoot/RootColumn/ContentRow/LeftDock/LeftScroll/LeftStack/StockpilePanel/StockpileMargin/StockpileVBox"]
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Margin" type="MarginContainer" parent="LayoutRoot/RootColumn/ContentRow/LeftDock/LeftScroll/LeftStack/SelectionPanel"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="Scroll" type="ScrollContainer" parent="LayoutRoot/RootColumn/ContentRow/LeftDock/LeftScroll/LeftStack/SelectionPanel/Margin"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
vertical_scroll_mode = 2
custom_minimum_size = Vector2(320, 0)

[node name="VBox" type="VBoxContainer" parent="LayoutRoot/RootColumn/ContentRow/LeftDock/LeftScroll/LeftStack/SelectionPanel/Margin/Scroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
[node name="SelectionTitle" type="Label" parent="LayoutRoot/RootColumn/ContentRow/LeftDock/LeftScroll/LeftStack/SelectionPanel/Margin/Scroll/VBox"]
text = "Selection"

[node name="SelectionDetail" type="Label" parent="LayoutRoot/RootColumn/ContentRow/LeftDock/LeftScroll/LeftStack/SelectionPanel/Margin/Scroll/VBox"]
text = ""
autowrap_mode = 2

[node name="UnitButtons" type="HBoxContainer" parent="LayoutRoot/RootColumn/ContentRow/LeftDock/LeftScroll/LeftStack/SelectionPanel/Margin/Scroll/VBox"]
size_flags_horizontal = 3
visible = false

[node name="UnitScoutButton" type="Button" parent="LayoutRoot/RootColumn/ContentRow/LeftDock/LeftScroll/LeftStack/SelectionPanel/Margin/Scroll/VBox/UnitButtons"]
text = "Scout Area"

[node name="UnitCampButton" type="Button" parent="LayoutRoot/RootColumn/ContentRow/LeftDock/LeftScroll/LeftStack/SelectionPanel/Margin/Scroll/VBox/UnitButtons"]
text = "Found Camp"

[node name="HerdButtons" type="HBoxContainer" parent="LayoutRoot/RootColumn/ContentRow/LeftDock/LeftScroll/LeftStack/SelectionPanel/Margin/Scroll/VBox"]
size_flags_horizontal = 3
visible = false

[node name="FollowHerdButton" type="Button" parent="LayoutRoot/RootColumn/ContentRow/LeftDock/LeftScroll/LeftStack/SelectionPanel/Margin/Scroll/VBox/HerdButtons"]
text = "Follow Herd"

[node name="FoodButtons" type="HBoxContainer" parent="LayoutRoot/RootColumn/ContentRow/LeftDock/LeftScroll/LeftStack/SelectionPanel/Margin/Scroll/VBox"]
size_flags_horizontal = 3
visible = false

[node name="ForageButton" type="Button" parent="LayoutRoot/RootColumn/ContentRow/LeftDock/LeftScroll/LeftStack/SelectionPanel/Margin/Scroll/VBox/FoodButtons"]
text = "Harvest"


[node name="CommandFeedPanel" type="Panel" parent="LayoutRoot/RootColumn/ContentRow/LeftDock/LeftScroll/LeftStack"]
script = ExtResource("2")
target_width = 520.0
min_height = 120.0
max_height = 360.0
bottom_margin = 24.0

[node name="MarginContainer" type="MarginContainer" parent="LayoutRoot/RootColumn/ContentRow/LeftDock/LeftScroll/LeftStack/CommandFeedPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = 0.0
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="LayoutRoot/RootColumn/ContentRow/LeftDock/LeftScroll/LeftStack/CommandFeedPanel/MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = 0.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CommandFeedHeading" type="Label" parent="LayoutRoot/RootColumn/ContentRow/LeftDock/LeftScroll/LeftStack/CommandFeedPanel/MarginContainer/VBoxContainer"]
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.9, 0.95, 1, 1)
text = "Command Feed"

[node name="CommandFeedScroll" type="ScrollContainer" parent="LayoutRoot/RootColumn/ContentRow/LeftDock/LeftScroll/LeftStack/CommandFeedPanel/MarginContainer/VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = 0.0
size_flags_horizontal = 3
size_flags_vertical = 3
vertical_scroll_mode = 2

[node name="CommandFeedLabel" type="RichTextLabel" parent="LayoutRoot/RootColumn/ContentRow/LeftDock/LeftScroll/LeftStack/CommandFeedPanel/MarginContainer/VBoxContainer/CommandFeedScroll"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 0
bbcode_enabled = true
scroll_active = false
fit_content = true
autowrap_mode = 2
text = "[i]No command activity yet.[/i]"

[node name="ZoomControls" type="HBoxContainer" parent="LayoutRoot/RootColumn/TopBar"]
theme_override_constants/separation = 4

[node name="ZoomOutButton" type="Button" parent="LayoutRoot/RootColumn/TopBar/ZoomControls"]
layout_mode = 2
text = "âˆ’"

[node name="ZoomResetButton" type="Button" parent="LayoutRoot/RootColumn/TopBar/ZoomControls"]
layout_mode = 2
text = "100%"

[node name="ZoomInButton" type="Button" parent="LayoutRoot/RootColumn/TopBar/ZoomControls"]
layout_mode = 2
text = "+"

[node name="TerrainLegendPanel" type="Panel" parent="LayoutRoot/RootColumn/ContentRow/RightDock/RightScroll/RightStack"]
visible = false

[node name="LegendContainer" type="VBoxContainer" parent="LayoutRoot/RootColumn/ContentRow/RightDock/RightScroll/RightStack/TerrainLegendPanel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
theme_override_constants/separation = 6

[node name="LegendTitle" type="Label" parent="LayoutRoot/RootColumn/ContentRow/RightDock/RightScroll/RightStack/TerrainLegendPanel/LegendContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.9, 0.95, 1, 1)
text = "Terrain Types"

[node name="LegendDescription" type="Label" parent="LayoutRoot/RootColumn/ContentRow/RightDock/RightScroll/RightStack/TerrainLegendPanel/LegendContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
autowrap_mode = 1

[node name="LegendScroll" type="ScrollContainer" parent="LayoutRoot/RootColumn/ContentRow/RightDock/RightScroll/RightStack/TerrainLegendPanel/LegendContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LegendList" type="VBoxContainer" parent="LayoutRoot/RootColumn/ContentRow/RightDock/RightScroll/RightStack/TerrainLegendPanel/LegendContainer/LegendScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
